version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/FE/CDB/CommandElementBodyForce.rst.txt
.. vale off



:class:`CommandElementBodyForce`
================================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.FE.CDB.CommandElementBodyForce

   Bases: :py:obj:`object`


   
   Represents element body-force loads associated to BFEBLOCK command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CommandElementBodyForce

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Count`
            - Gets the number of element body-force loads.
          * - :py:attr:`~Elem`
            - Gets the element number.
          * - :py:attr:`~Stlocs`
            - Gets the starting locations.
          * - :py:attr:`~Values`
            - Gets the values.







Property detail
---------------
.. py:property:: Count
   :type: Optional[int]

   
   Gets the number of element body-force loads.
















   ..
       !! processed by numpydoc !!

.. py:property:: Elem
   :type: Optional[int]

   
   Gets the element number.
















   ..
       !! processed by numpydoc !!

.. py:property:: Stlocs
   :type: Optional[tuple[int]]

   
   Gets the starting locations.
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[tuple[Any]]

   
   Gets the values.
















   ..
       !! processed by numpydoc !!







.. vale on