version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/CDB/CommandElementBodyForce.rst.txt
.. vale off



:class:`CommandElementBodyForce`
================================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.CDB.CommandElementBodyForce(iElementBodyForce: Ansys.Common.Interop.FEParsePlugin_ANSYS.IElementBodyForce)

   Bases: :py:obj:`object`


   
   Represents element body-force loads associated to BFEBLOCK command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CommandElementBodyForce

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Count`
            - Gets the number of element body-force loads.
          * - :py:attr:`~Elem`
            - Gets the element number.
          * - :py:attr:`~Stlocs`
            - Gets the starting locations.
          * - :py:attr:`~Values`
            - Gets the values.







Property detail
---------------
.. py:property:: Count
   :type: Optional[int]


   
   Gets the number of element body-force loads.
















   ..
       !! processed by numpydoc !!

.. py:property:: Elem
   :type: Optional[int]


   
   Gets the element number.
















   ..
       !! processed by numpydoc !!

.. py:property:: Stlocs
   :type: Optional[tuple[int]]


   
   Gets the starting locations.
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[tuple[Any]]


   
   Gets the values.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on